--- a/MeltyInstaller/MeltyInstaller.csproj
+++ b/MeltyInstaller/MeltyInstaller.csproj
@@ -1,16 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
     <Authors>okkdev</Authors>
     <RepositoryUrl>https://github.com/okkdev/melty-installer</RepositoryUrl>
     <ApplicationManifest>app.manifest</ApplicationManifest>
+    <ApplicationIcon>necobox.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
     <None Remove="necobox.png" />
+    <None Remove="necobox.ico" />
   </ItemGroup>
 
   <ItemGroup>
@@ -19,6 +21,7 @@
 
   <ItemGroup>
     <Resource Include="necobox.png" />
+    <Resource Include="necobox.ico" />
   </ItemGroup>
 
 </Project>
