--- a/MeltyInstaller/MeltyInstaller.csproj
+++ b/MeltyInstaller/MeltyInstaller.csproj
@@ -26,6 +26,8 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Ookii.Dialogs.Wpf" Version="3.1.0" />
+    <PackageReference Include="WindowsAPICodePack-Core" Version="1.1.2" />
+    <PackageReference Include="WindowsAPICodePack-Shell" Version="1.1.1" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="necobox.png" />
