--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2021"
 [dependencies]
 iced = { version = "0.10", features = ["tokio"] }
 reqwest = "0.11.22"
+rfd = "0.12.1"
 ripunzip = "1.1.0"
